syntax = "proto3";

package accounts.captcha.verification.request;

message Request {
    string input_solution = 1;
}

