syntax = "proto3";

package accounts.captcha.verify.response;

enum Error {
    TOO_MANY_REQUESTS = 0;
    SERVER_ERROR = 1;
    INCORRECT_CAPTCHA = 2;
}

message Success {}

message Response {
  oneof response_field {
    Error error = 1;
    Success success = 2;
  }
}

